kubernetes/deploy/proxies/internal/sabnzbd/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: sabnzbd
spec:
  ports:
  - protocol: TCP
    port: 8080
    name: http
    targetPort: 8080
