kubernetes/deploy/proxies/internal/sabnzbd/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik-internal
  name: sabnzbd
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`sabnzbd.vandeneede.org`)
    services:
    - name: sabnzbd
      port: 8080
